--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Lab2</string>
+    <string name="app_name">Button Demo</string>
+    <string name="buttonName">Click Me</string>
 </resources>
